Fix nexenta logo on mobile

--- a/all.css
+++ b/all.css
@@ -64,7 +64,9 @@ h1, h2 {
 a, a:visited, a:hover, a:active, a:focus {
     color: #FFF;
 }
-
+.nexenta-logo {
+    width: 285px;
+}
 .technology h2 {
     margin-bottom: 0;
 }
